Fixed delete account button spacing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -310,3 +310,7 @@ table, th, td {
 #delete-account > * {
   margin-top: 0px;
 }
+
+#delete-account-button {
+   margin-left: 40px;
+}
